cmake_minimum_required(VERSION 3.15)
project(DataStructure)

set(CMAKE_CXX_STANDARD 14)

add_executable(DataStructure main.cpp chapter2/SeqList.h chapter2/SinList.h chapter2/CircList.h chapter3/SeqStatck.h chapter5/BInaryTree.h chapter3/LinkedStack.h chapter3/SeqQueue.h chapter3/SeqQuene.cpp chapter2/CircList.cpp chapter2/SeqList.cpp chapter2/SinList.cpp chapter3/LinkedStack.cpp chapter3/SeqStack.cpp)